[gd_scene load_steps=11 format=3 uid="uid://c7yjxtrtxcdey"]

[ext_resource type="Theme" uid="uid://cujwxpvp1qx1n" path="res://themes/mcsm.tres" id="1_3gqar"]
[ext_resource type="Script" path="res://scripts/skin_container.gd" id="1_rwqff"]
[ext_resource type="Texture2D" uid="uid://dfct4svdji18k" path="res://images/icon.svg" id="3_f4an0"]
[ext_resource type="Script" path="res://scripts/skin_data.gd" id="3_vjmbq"]
[ext_resource type="Texture2D" uid="uid://o2abjmalvbkj" path="res://images/select.png" id="4_cbn11"]
[ext_resource type="Texture2D" uid="uid://cwca1tq8kow7e" path="res://images/duplicate_stack.svg" id="6_fe7pv"]
[ext_resource type="Texture2D" uid="uid://bes5ab003rjdd" path="res://images/delete.svg" id="7_my58w"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_67xsc"]

[sub_resource type="Resource" id="Resource_svsqp"]
script = ExtResource("3_vjmbq")
name = "fefe"
model_image = SubResource("CompressedTexture2D_67xsc")
slim = true
cape_id = ""
created = 0
texture_id = ""

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nd123"]
size = Vector2(281, 403)

[node name="SkinContainer" type="Panel" node_paths=PackedStringArray("label", "image", "select_graphic") groups=["container"]]
custom_minimum_size = Vector2(300, 454)
theme = ExtResource("1_3gqar")
script = ExtResource("1_rwqff")
data = SubResource("Resource_svsqp")
label = NodePath("Label")
image = NodePath("ModelImage")
select_graphic = NodePath("SelectGraphic")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 26.0
grow_horizontal = 2
theme = ExtResource("1_3gqar")
text = "<unnamed skin>"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Duplicate" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -36.0
offset_right = 42.0
offset_bottom = -4.0
grow_vertical = 0
theme = ExtResource("1_3gqar")
icon = ExtResource("6_fe7pv")
icon_alignment = 1
expand_icon = true

[node name="Edit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -36.0
offset_right = 100.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_3gqar")
text = "EDIT"

[node name="Delete" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -36.0
offset_right = -9.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_3gqar")
icon = ExtResource("7_my58w")
icon_alignment = 1
expand_icon = true

[node name="ModelImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_top = 32.0
offset_right = 144.0
offset_bottom = 416.0
grow_horizontal = 2
texture = ExtResource("3_f4an0")

[node name="SelectGraphic" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_cbn11")
stretch_mode = 3

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(149.5, 210.5)
shape = SubResource("RectangleShape2D_nd123")
debug_color = Color(0, 0.584314, 0.792157, 0.419608)

[connection signal="pressed" from="Duplicate" to="." method="duplicate_container"]
[connection signal="pressed" from="Edit" to="." method="open_editor"]
[connection signal="pressed" from="Delete" to="." method="open_delete_confirmation"]
